src/test/ui/rfcs/rfc-2396-target_feature-11/fn-traits.stderr
error[E0277]: expected a `Fn<()>` closure, found `fn() {foo}`
  --> $DIR/fn-traits.rs:24:10
   |
LL |     call(foo);
   |     ---- ^^^ expected an `Fn<()>` closure, found `fn() {foo}`
   |     |
   |     required by a bound introduced by this call
   |
   = help: the trait `Fn<()>` is not implemented for `fn() {foo}`
   = note: wrap the `fn() {foo}` in a closure with no arguments: `|| { /* code */ }`
   = note: `#[target_feature]` functions do not implement the `Fn` traits
note: required by a bound in `call`
  --> $DIR/fn-traits.rs:11:17
   |
LL | fn call(f: impl Fn()) {
   |                 ^^^^ required by this bound in `call`

error[E0277]: expected a `FnMut<()>` closure, found `fn() {foo}`
  --> $DIR/fn-traits.rs:25:14
   |
LL |     call_mut(foo);
   |     -------- ^^^ expected an `FnMut<()>` closure, found `fn() {foo}`
   |     |
   |     required by a bound introduced by this call
   |
   = help: the trait `FnMut<()>` is not implemented for `fn() {foo}`
   = note: wrap the `fn() {foo}` in a closure with no arguments: `|| { /* code */ }`
   = note: `#[target_feature]` functions do not implement the `Fn` traits
note: required by a bound in `call_mut`
  --> $DIR/fn-traits.rs:15:21
   |
LL | fn call_mut(f: impl FnMut()) {
   |                     ^^^^^^^ required by this bound in `call_mut`

error[E0277]: expected a `FnOnce<()>` closure, found `fn() {foo}`
  --> $DIR/fn-traits.rs:26:15
   |
LL |     call_once(foo);
   |     --------- ^^^ expected an `FnOnce<()>` closure, found `fn() {foo}`
   |     |
   |     required by a bound introduced by this call
   |
   = help: the trait `FnOnce<()>` is not implemented for `fn() {foo}`
   = note: wrap the `fn() {foo}` in a closure with no arguments: `|| { /* code */ }`
   = note: `#[target_feature]` functions do not implement the `Fn` traits
note: required by a bound in `call_once`
  --> $DIR/fn-traits.rs:19:22
   |
LL | fn call_once(f: impl FnOnce()) {
   |                      ^^^^^^^^ required by this bound in `call_once`

error[E0277]: expected a `Fn<()>` closure, found `unsafe fn() {foo_unsafe}`
  --> $DIR/fn-traits.rs:28:10
   |
LL |     call(foo_unsafe);
   |     ---- ^^^^^^^^^^ expected an `Fn<()>` closure, found `unsafe fn() {foo_unsafe}`
   |     |
   |     required by a bound introduced by this call
   |
   = help: the trait `Fn<()>` is not implemented for `unsafe fn() {foo_unsafe}`
   = note: wrap the `unsafe fn() {foo_unsafe}` in a closure with no arguments: `|| { /* code */ }`
   = note: `#[target_feature]` functions do not implement the `Fn` traits
note: required by a bound in `call`
  --> $DIR/fn-traits.rs:11:17
   |
LL | fn call(f: impl Fn()) {
   |                 ^^^^ required by this bound in `call`

error[E0277]: expected a `FnMut<()>` closure, found `unsafe fn() {foo_unsafe}`
  --> $DIR/fn-traits.rs:30:14
   |
LL |     call_mut(foo_unsafe);
   |     -------- ^^^^^^^^^^ expected an `FnMut<()>` closure, found `unsafe fn() {foo_unsafe}`
   |     |
   |     required by a bound introduced by this call
   |
   = help: the trait `FnMut<()>` is not implemented for `unsafe fn() {foo_unsafe}`
   = note: wrap the `unsafe fn() {foo_unsafe}` in a closure with no arguments: `|| { /* code */ }`
   = note: `#[target_feature]` functions do not implement the `Fn` traits
note: required by a bound in `call_mut`
  --> $DIR/fn-traits.rs:15:21
   |
LL | fn call_mut(f: impl FnMut()) {
   |                     ^^^^^^^ required by this bound in `call_mut`

error[E0277]: expected a `FnOnce<()>` closure, found `unsafe fn() {foo_unsafe}`
  --> $DIR/fn-traits.rs:32:15
   |
LL |     call_once(foo_unsafe);
   |     --------- ^^^^^^^^^^ expected an `FnOnce<()>` closure, found `unsafe fn() {foo_unsafe}`
   |     |
   |     required by a bound introduced by this call
   |
   = help: the trait `FnOnce<()>` is not implemented for `unsafe fn() {foo_unsafe}`
   = note: wrap the `unsafe fn() {foo_unsafe}` in a closure with no arguments: `|| { /* code */ }`
   = note: `#[target_feature]` functions do not implement the `Fn` traits
note: required by a bound in `call_once`
  --> $DIR/fn-traits.rs:19:22
   |
LL | fn call_once(f: impl FnOnce()) {
   |                      ^^^^^^^^ required by this bound in `call_once`

error: aborting due to 6 previous errors

For more information about this error, try `rustc --explain E0277`.
